Crawler 4 J start to crawling sites